traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: not found: value y
    colonne(y);
            ^TraversalByColumn:12: error: not found: value x
    setPos(x,y);
           ^TraversalByColumn:13: error: not found: value count
    writeMessage(count);
                 ^