traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x:Int=0;
  var count:Int=0;
  
  while(x!=getWorldWidth()-1){
    colonne(y);
    x=x+1;
  }
    }
def colonne(y:Int){
  var y:Int=0
  while(y!=getWorldHeight()){
    setPos(x,y);
    writeMessage(count);
    y=y+1;
  }
}